<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensible Journal</string>
    <string name="archive_activity">ArchiveActivity</string>
    <string name="cards_activity">CardsActivity</string>
    <string name="archive">Archive</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh Cards</string>
    <string name="my_current_location_card_title">My Current Location</string>
    <string name="todays_itinerary_card_title">Daily Itinerary</string>
    <string name="weekly_itinerary_card_title">Weekly Itinerary</string>
    <string name="most_visited_header_title">Most Visited Places</string>
    <string name="past_stop_header_title">Last Visited Place</string>
    <string name="commute_header_title">Latest Journey</string>
    <string name="map_thumbnail_description">Map Thumbnail</string>
    <string name="like_card">Like Card!</string>
    <string name="total_distance_text">Total distance travelled</string>
    <string name="no_of_unique_places_text">Unique places visited</string>
    <string name="no_of_stops_text">Stops</string>
    <string name="title_activity_my_location_detailed_view">MyLocationDetailedView</string>
    <string name="drawer_title">Card Filter</string>
    <string name="title_activity_todays_itinerary_detailed_view">TodaysItineraryDetailedView</string>
    <string name="title_activity_archive_days">ArchiveDaysActivity</string>
    <string name="itinerary">Itinerary</string>
    <string name="animate_itinerary">Animate!</string>
    <string name="drop_details">Drop details down</string>
    <string name="map_info">Map position information</string>
    <string name="directions_icon">Directions icon</string>
    <string name="place_icon">Place icon</string>
    <string name="reduce_button">Reduce number of most visited places viewed</string>
    <string name="increase_button">Increase number of most visited places viewed</string>
    <string name="title_activity_most_visited_detailed_view">MostVisitedDetailedView</string>
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_past_stop_detailed_view">PastStopDetailedView</string>
    <string name="vehicle_image">Means of transport image</string>
    <string name="title_activity_commute_detailed_view">CommuteDetailedView</string>
    <string name="title_activity_weekly_itinerary_detailed_view">WeeklyItineraryDetailedView</string>
    <string name="address_title">Address</string>
    <string name="region_title">Region</string>
    <string name="time_spent_title_title">Time spent</string>
    <string name="title_activity_archive_weeks">ArchiveWeeksActivity</string>
    <string name="sensible_dtu">Sensible DTU Logo</string>
    <string name="login_wait_message">Please wait while login starts&#8230;</string>
    <string name="awesome">Click if useful!</string>
    <string name="stationary_title">Time spent stationary</string>
    <string name="walking_title">Time spent walking</string>
    <string name="biking_title">Time spent biking</string>
    <string name="vehicle_title">Time spent on a vehicle</string>
    <string name="show_more">Show more button</string>    
    <string name="archived">Archived</string>
    <string name="tutorial1_title">Welcome to Sensible Journal 2014</string>
    <string name="tutorial2_title">Your itineraries are archived!</string>
    <string name="tutorial3_title">Scroll to access your history!</string>
    <string name="tutorial4_title">Explore the detailed views!</string>
    <string name="tutorial5_title">Have fun!</string>
    <string name="tutorial1_text">Observe your daily movements! The top 6 cards provide the latest information about your movements&#8230;</string>
    <string name="tutorial2_text">By swiping to the right you have access to all your archived daily and weekly itineraries&#8230;</string>
    <string name="tutorial3_text">Scrolling down also provides access to previous daily and weekly archived itineraries&#8230;</string>
    <string name="tutorial4_text">Each card provides a detailed view of your movements and stats. Press the buttons shown above to access further info or visualize your movements&#8230;</string>
    <string name="tutorial5_text">Swipe away the tutorial cards when you are done with them. Enjoy exploring!</string>
                
    <string name="app_description">SensibleJournal 2014 provides a card-based interface for visualizing your SensibleDTU data\n\n
        							More visualizations coming soon!</string>
         
    <string name="license">Copyright 2014, Georgios Chatzigeorgakidis\n\n 
		SensibleJournal uses the following opensource projects:\n
		(License information available at the webpages of the respective copyright owners)\n
		&#8226; https://github.com/gabrielemariotti/cardslib\n
		&#8226; http://ddewaele.github.io/GoogleMapsV2WithActionBarSherlock\n
		&#8226; http://simpleprogrammer.com/2011/06/04/oauth-and-rest-in-android-part-2\n
		&#8226; http://www.makeurownrules.com/secure-rest-web-service-mobile-application-android.html\n
		&#8226; https://developers.google.com/maps/documentation/android\n
		&#8226; http://www.movable-type.co.uk/scripts/latlong.html\n
		&#8226; http://mobile.dzone.com/news/android-tutorial-dynamicaly\n
		
		\nIcons adapted from \nhttp://www.flaticon.com/
	</string>
	
    <string name="app_id">1410151465935754</string>

</resources>
